WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
251056
[GStreamer] Fix a crash for fast/speechsynthesis/speech-synthesis-real-client-version.html
https://bugs.webkit.org/show_bug.cgi?id=251056
Summary
[GStreamer] Fix a crash for fast/speechsynthesis/speech-synthesis-real-client...
ChangSeok Oh
Reported
2023-01-23 17:57:24 PST
The fast/speechsynthesis/speech-synthesis-real-client-version.html crashes. Its backtrace is like the following. #0 0x00007ffff1ecbdd8 in WTF::String::tryGetUTF8(WTF::ConversionMode) const () from target:/app/webkit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.1.so.0 #1 0x00007ffff1ecbea0 in WTF::String::utf8(WTF::ConversionMode) const () from target:/app/webkit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.1.so.0 #2 0x00007ffff51985ea in webKitFliteSrcSetUtterance(_WebKitFliteSrc*, WTF::String const&, WebCore::PlatformSpeechSynthesisVoice const&) () from target:/app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.1.so.0 #3 0x00007ffff51914e8 in WebCore::GstSpeechSynthesisWrapper::speakUtterance(WTF::RefPtr<WebCore::PlatformSpeechSynthesisUtterance, WTF::RawPtrTraits<WebCore::PlatformSpeechSynthesisUtterance>, WTF::DefaultRefDerefTraits<WebCore::PlatformSpeechSynthesisUtterance> >&&) [clone .part.0] () from target:/app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.1.so.0 #4 0x00007ffff51923f5 in WebCore::PlatformSpeechSynthesizer::speak(WTF::RefPtr<WebCore::PlatformSpeechSynthesisUtterance, WTF::RawPtrTraits<WebCore::PlatformSpeechSynthesisUtterance>, WTF::DefaultRefDerefTraits<WebCore::PlatformSpeechSynthesisUtterance> >&&) () from target:/app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.1.so.0 #5 0x00007ffff5f5f312 in WebCore::SpeechSynthesis::startSpeakingImmediately(WebCore::SpeechSynthesisUtterance&) () from target:/app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.1.so.0 #6 0x00007ffff5b39f98 in WebCore::jsSpeechSynthesisPrototypeFunction_speak(JSC::JSGlobalObject*, JSC::CallFrame*) () from target:/app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.1.so.0 #7 0x00007fff90008038 in ?? () #8 0x00007fffffffc180 in ?? () #9 0x00007ffff093a5e4 in js_trampoline_op_call () from target:/app/webkit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.1.so.0 #10 0x0000000000000000 in ?? ()
Attachments
Add attachment
proposed patch, testcase, etc.
ChangSeok Oh
Comment 1
2023-01-23 18:11:22 PST
Pull request:
https://github.com/WebKit/WebKit/pull/9009
EWS
Comment 2
2023-01-24 00:24:16 PST
Committed
259265@main
(1153afca6d71): <
https://commits.webkit.org/259265@main
> Reviewed commits have been landed. Closing PR #9009 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug