[GStreamer] Fix a crash for fast/speechsynthesis/speech-synthesis-real-client-version.html https://bugs.webkit.org/show_bug.cgi?id=251056

Reviewed by Xabier Rodriguez-Calvar.

The crash happens when the web content does not specify a voice to use. We handle a null pointer
of the voice with the default voice.

Test: fast/speechsynthesis/speech-synthesis-real-client-version.html

* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/platform/gstreamer/PlatformSpeechSynthesizerGStreamer.cpp:
(WebCore::GstSpeechSynthesisWrapper::speakUtterance):
* Source/WebCore/platform/gstreamer/WebKitFliteSourceGStreamer.cpp:
(fliteVoice):
(webKitFliteSrcSetUtterance):
* Source/WebCore/platform/gstreamer/WebKitFliteSourceGStreamer.h:

Canonical link: https://commits.webkit.org/259265@main